@@ -1,4 +1,4 @@
-momentuHMM 2.0.0 2022-03-22
+momentuHMM 2.0.0 2022-03-23
 -----------------
 NEW FEATURES
 
@@ -17,6 +17,8 @@ CHANGES
 * raster package moved to 'Imports'
 
 BUG FIXES
+
+* for multivariate normal data streams, pseudo-residuals were improperly calculated using a chi-square CDF ('qchisq') instead of the standard normal CDF ('qnorm')
 
 * getParDM did not properly calculate working scale parameters for categorical distribution parameters when DM included covariates or constraints
 
